made map centered and fixed some word alignments

--- a/src/Envelope.css
+++ b/src/Envelope.css
@@ -179,7 +179,9 @@ body, html {
   font-size: 24px;
   margin-top: 30px;
 }
-
+#location {
+  margin-bottom: 100px;
+}
 /*#fullscreen-letter p {
   line-height: 1.6;
   margin-bottom: 15px;
@@ -187,6 +189,13 @@ body, html {
 
 #fullscreen-letter strong {
   color: #2c3e50;
+}
+
+.stoop-map-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%; /* Adjust width as needed */
 }
 
 #fullscreen-letter ul {
